<resources>
    <string name="app_name">Enigma</string>
    <string name="title_news">Новости</string>
    <string name="title_vakcinaciya">Вакцинация</string>
    <string name="title_profile">Личный кабинет</string>
    <string name="title_settings">Настройки</string>

    <string name="fieldCantBeEmpty">Поле не может быть пустым</string>

    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="passwordConfirmation">Подтверждение пароля</string>

    <string name="fio">Ф.И.О.</string>
    <string name="firstName">Имя</string>
    <string name="lastName">Фамилия</string>
    <string name="med_card">Номер медицинской карты</string>
    <string name="passport">Пасспортные данные</string>
    <string name="city">Город</string>
    <string name="street">Улица</string>
    <string name="email">Электронная почта</string>
    <string name="phone">Телефон</string>
    <string name="sex">Пол</string>
    <string name="birth">Дата рождения</string>
    <string name="doRegister">Зарегистрироваться</string>
    <string name="register">Регистрация</string>
    <string name="agreement">Я согласен на обработку персональных данных в соответствии с 152 ФЗ</string>
    <string name="passwordsDontMatch">Пароли не совпадают</string>

    <string name="readMore">Читать в источнике…</string>

</resources>