<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNameTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/firstName"/>

        <TextView
            android:id="@+id/tvName"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvSurnameTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/lastName"/>

        <TextView
            android:id="@+id/tvSurname"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvOmsNumberTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/med_card"/>

        <TextView
            android:id="@+id/tvOmsNumber"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvPassportTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/passport"/>

        <TextView
            android:id="@+id/tvPassport"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvCityTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/city" />

        <TextView
            android:id="@+id/tvCity"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvStreetTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/street"/>

        <TextView
            android:id="@+id/tvStreet"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvEmailTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/email"/>

        <TextView
            android:id="@+id/tvEmail"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvPhoneTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/phone"/>

        <TextView
            android:id="@+id/tvPhone"
            style="@style/RegisterTextView"/>

        <TextView
            android:id="@+id/tvDateBirthTitle"
            style="@style/RegisterTextView"
            android:textSize="20sp"
            android:text="@string/birth"/>

        <TextView
            android:id="@+id/tvDateBirth"
            style="@style/RegisterTextView"/>

    </LinearLayout>
</ScrollView>