<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="ru.sinura.hackaton.main.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_vakcinaciya"
        android:name="ru.sinura.hackaton.main.ui.vakcinaciya.VakcinaciyaFragment"
        android:label="@string/title_vakcinaciya"
        tools:layout="@layout/fragment_vakcinaciya" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="ru.sinura.hackaton.main.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>